chore: add ktlint (#13)